# Generated by Django 4.2.7 on 2026-06-12 07:28

from django.db import migrations, models
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='BlockchainEvent',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('event_type', models.CharField(choices=[('mission_created', 'Mission Created'), ('mission_accepted', 'Mission Accepted'), ('proof_submitted', 'Proof Submitted'), ('mission_validated', 'Mission Validated'), ('mission_cancelled', 'Mission Cancelled'), ('payment_released', 'Payment Released'), ('deposit_locked', 'Deposit Locked'), ('deposit_released', 'Deposit Released')], max_length=50)),
                ('contract_address', models.CharField(max_length=100)),
                ('transaction_hash', models.CharField(max_length=100)),
                ('block_number', models.BigIntegerField()),
                ('log_index', models.PositiveIntegerField()),
                ('event_data', models.JSONField(default=dict)),
                ('processed', models.BooleanField(default=False)),
                ('processed_at', models.DateTimeField(blank=True, null=True)),
                ('error_message', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['-block_number', '-log_index'],
            },
        ),
        migrations.CreateModel(
            name='EscrowTransaction',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('transaction_type', models.CharField(choices=[('deposit', 'Dépôt'), ('release', 'Libération'), ('refund', 'Remboursement'), ('penalty', 'Pénalité'), ('bonus', 'Bonus')], max_length=20)),
                ('status', models.CharField(choices=[('pending', 'En attente'), ('confirmed', 'Confirmé'), ('failed', 'Échoué'), ('cancelled', 'Annulé')], default='pending', max_length=20)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=15)),
                ('currency', models.CharField(default='USDT', max_length=10)),
                ('blockchain_mission_id', models.CharField(blank=True, help_text='ID de la mission sur la blockchain', max_length=100)),
                ('deposit_tx_hash', models.CharField(blank=True, help_text='Hash de la transaction de dépôt', max_length=100)),
                ('release_tx_hash', models.CharField(blank=True, help_text='Hash de la transaction de libération', max_length=100)),
                ('block_number', models.BigIntegerField(blank=True, null=True)),
                ('gas_used', models.BigIntegerField(blank=True, null=True)),
                ('confirmations', models.PositiveIntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('confirmed_at', models.DateTimeField(blank=True, null=True)),
                ('reason', models.TextField(blank=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='PaymentLog',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=15)),
                ('currency', models.CharField(default='USDT', max_length=10)),
                ('payment_method', models.CharField(choices=[('crypto', 'Crypto (USDT/ETH)'), ('mobile_money', 'Mobile Money'), ('bank_transfer', 'Virement Bancaire'), ('card', 'Carte Bancaire')], max_length=20)),
                ('status', models.CharField(choices=[('pending', 'En attente'), ('processing', 'En cours'), ('completed', 'Complété'), ('failed', 'Échoué'), ('refunded', 'Remboursé')], default='pending', max_length=20)),
                ('mobile_provider', models.CharField(blank=True, choices=[('orange', 'Orange Money'), ('moov', 'Moov Money'), ('wave', 'Wave'), ('mtn', 'MTN Mobile Money')], max_length=20)),
                ('phone_number', models.CharField(blank=True, max_length=20)),
                ('transaction_id', models.CharField(blank=True, max_length=100)),
                ('description', models.TextField(blank=True)),
                ('external_reference', models.CharField(blank=True, max_length=100)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ProviderDeposit',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=15)),
                ('currency', models.CharField(default='USDT', max_length=10)),
                ('status', models.CharField(choices=[('active', 'Active'), ('locked', 'Verrouillée'), ('released', 'Libérée'), ('forfeited', 'Confisquée')], default='active', max_length=20)),
                ('blockchain_deposit_id', models.CharField(blank=True, max_length=100)),
                ('deposit_tx_hash', models.CharField(blank=True, max_length=100)),
                ('is_dynamic', models.BooleanField(default=False)),
                ('calculated_required_amount', models.DecimalField(blank=True, decimal_places=2, max_digits=15, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('locked_at', models.DateTimeField(blank=True, null=True)),
                ('released_at', models.DateTimeField(blank=True, null=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
    ]
