---
title: Figure 3.6a — Classes — Utilisateurs et Profils
---
classDiagram
    direction TB

    class User {
        +UUID id
        +String email
        +Enum user_type
        +Enum kyc_status
        +String nina
        +Boolean gps_tracking_enabled
    }

    class ProviderProfile {
        +Float reputation_score
        +Decimal deposit_balance
        +Decimal deposit_locked
        +Enum level
    }

    class ReputationScore {
        +Float overall_score
        +Float success_rate
        +Float avg_rating
    }

    class User2FA {
        +String secret_key
        +Boolean is_enabled
        +DateTime last_used
    }

    class ProviderDeposit {
        +Decimal amount
        +Enum status
        +Boolean is_dynamic
    }

    User "1" --> "0..1" ProviderProfile : possède
    User "1" --> "0..1" ReputationScore : a
    User "1" --> "0..1" User2FA : configure
    User "1" --> "*" ProviderDeposit : dépose
